# calc

./: .gitignore  README.md  RESTORE.md  autostart_cyberdeck.sh  casio_ai.py  cyberdeck_boot.sh  restart_ai.sh
cg-virtual-monitor/vnc-client/: CMakeLists.txt
cg-virtual-monitor/vnc-client/src/: main.c
config/sway/: config
config/wayvnc/: config
systemd/: cyberdeck.service  wifi-ensure.service
